# voice-to-text

./: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json
src/: App.tsx  env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src/audio/: audioRecorder.ts
src/hooks/: usePushToTalk.ts
src/services/: clipboardService.ts  deepgramService.ts
src/styles/: app.css
